# auto-fb

./: .env.example  .gitignore  .last_bank_tx.json  .mcp.json  .orchestrator_state.json  AGENTS.md  README.md  accounts.example.json  accounts.py  com.eba.fb-marketing-agent.plist  database.py  fb_cancel_requests.py  fb_liker.py  fb_marketing_agent.py  fb_messenger.py  fb_orchestrator.py  fb_poster.py  fb_reel_generator.py  fb_unfriend.py  import_groups.py  khanbank_login.py  main.py  models.py  pyproject.toml
alembic/: env.py
alembic/versions/: 36bea284dc4a_create_fbgroups_table.py  52a5d241e5cc_add_last_marketed_date.py  a520a1283c4a_add_posted_articles_table.py  b032c85c242c_add_fb_friends_table.py  c9a8f0f8d2b1_add_generated_reels_table.py  d1e3f4a5b6c7_add_multi_account_support.py
assets/posts/: 2026-04-sodura-ielts-group-post-01-caption.md
data/: joined-group-list.html
docs/: reel-generation.md
